# backend/routes/authRoutes.ts
@@ -1,0 +1,9 @@
+import express from 'express';
+import * as authController from "@controllers/authControllers";
+
+const router = express.Router();
+
+router.post('/api/signUp', authController.signUp);
+router.post('/api/signIn', authController.signIn);
+
+export default router;
